Added z-scaler certs.

--- a/precision-api/Dockerfile
+++ b/precision-api/Dockerfile
@@ -1,6 +1,11 @@
 # Use the official Node.js image as the base image
 FROM node:20
 
+
+ADD ZscalerRootCertificate-2048-SHA256.crt /usr/local/share/ca-certificates/ZscalerRootCertificate.crt
+RUN chmod 644 /usr/local/share/ca-certificates/ZscalerRootCertificate.crt && update-ca-certificates
+ENV REQUESTS_CA_BUNDLE=/etc/ssl/certs/ca-certificates.crt
+
 # Set the working directory inside the container
 WORKDIR /app
 
@@ -9,6 +14,9 @@ RUN apt-get update && apt-get install -y ffmpeg && rm -rf /var/lib/apt/lists/*
 
 # Copy package.json and package-lock.json to the working directory
 COPY package*.json ./
+
+# Configure npm to use the custom certificate
+RUN npm config set cafile /usr/local/share/ca-certificates/ZscalerRootCertificate.crt
 
 # Install dependencies
 RUN npm install
