--- a/precision-digitizer/Dockerfile
+++ b/precision-digitizer/Dockerfile
@@ -1,6 +1,10 @@
 
 FROM python:3.11.0-bullseye
 
+ADD ZscalerRootCertificate-2048-SHA256.crt /usr/local/share/ca-certificates/ZscalerRootCertificate.crt
+RUN chmod 644 /usr/local/share/ca-certificates/ZscalerRootCertificate.crt && update-ca-certificates
+ENV REQUESTS_CA_BUNDLE=/etc/ssl/certs/ca-certificates.crt
+
 # Switch working directory
 WORKDIR /app
 
