--- a/precision-api/package.json
+++ b/precision-api/package.json
@@ -26,14 +26,14 @@
     "@nestjs/platform-socket.io": "^11.0.16",
     "jimp": "^0.2.15",
     "reflect-metadata": "^0.2.2",
-    "rxjs": "^7.8.1"
+    "rxjs": "^7.8.1",
+    "@nestjs/cli": "^11.0.7",
+    "@nestjs/schematics": "^11.0.0",
+    "@nestjs/testing": "^11.0.1"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3.2.0",
     "@eslint/js": "^9.18.0",
-    "@nestjs/cli": "^11.0.0",
-    "@nestjs/schematics": "^11.0.0",
-    "@nestjs/testing": "^11.0.1",
     "@swc/cli": "^0.6.0",
     "@swc/core": "^1.10.7",
     "@types/express": "^5.0.0",
